chore(auto): 自動存檔 client/index.html

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/icons/pwa-192.png" />
     <meta name="description" content="賈村競技體驗場實境遊戲系統 - 結合射擊、拍照、GPS定位的沉浸式遊戲體驗" />
     <meta name="theme-color" content="#111827" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="賈村競技場" />
     <meta property="og:title" content="賈村競技場 | 實境遊戲系統" />
     <meta property="og:description" content="結合射擊、拍照、GPS定位的沉浸式遊戲體驗" />
     <meta property="og:type" content="website" />
